[fix] flexbox issue on firefox

--- a/source/sass/modules/molecules/_block-job.sass
+++ b/source/sass/modules/molecules/_block-job.sass
@@ -18,6 +18,7 @@
 .job_thumb
   flex: 0 0 50px
   margin-right: $space-half
+  min-width: 0
   +mq($bp-sm)
     flex: 0 0 100px
     margin-right: $space
