--- a/source/sass/modules/molecules/_block-person.sass
+++ b/source/sass/modules/molecules/_block-person.sass
@@ -19,6 +19,7 @@
   flex: 0 0 60px
   height: 60px
   margin-right: $space-half
+  min-width: 0
 
 .person_imageWrapper
   margin-bottom: 0
